--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -6,8 +6,48 @@ body{
 	background: #eeeeee;
 }
 
+#top-header{
+	position: sticky;
+	top: 0;
+	overflow: hidden;
+	background-color:#d8bfd8;
+	border-bottom: 1px solid #bebebe;
+	box-shadow: 1px 4px 10px #bebebe;
+	padding: 0 35px;
+}
+
+#top-header a{
+  display: block;
+  color: #363851;
+  text-align: center;
+  padding: 15px;
+  text-decoration: none;
+  font-weight: 300;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+#top-header a:hover{
+	background-color: #6aa1c4;
+	color: #fff !important;
+}
+
+.right{
+	float: right;
+}
+
+.left{
+	float: left;
+}
+
+.brand{
+	background-color: #363851;
+	color: #fff !important;
+	border-top-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+
 .container{
-	display: flex;
 	padding: 50px;
 	min-height: 100px;
 }
@@ -15,6 +55,7 @@ body{
 .form-container{
 	margin: 0 auto;
 	min-width: 40%;
+	width: 40%;
 	padding: 5px;
 	border-radius: 3px;
 	background: #fff;
@@ -22,18 +63,26 @@ body{
 	box-shadow: 1px 4px 10px #bebebe;
 }
 
-.c-header{
+.header{
 	color: #363851;
 	font-weight: 300;
-	text-align: center;
 	letter-spacing: 5px;
 	text-transform: uppercase;
 }
-.u-line{
-	margin: 0 auto;
-	border-bottom: 1px solid #d8bfd8;
-	width: 50%;
+.c-header{
+	text-align: center;
 }
+
+.l-header{
+	text-align: left;
+	margin-left: 35px;
+}
+
+.u-line{
+	border-bottom: 1px solid #d8bfd8;
+	width: 70%;
+}
+
 
 .input-group{
 	display: flex;
@@ -67,12 +116,42 @@ input:focus{
 	border-bottom: 1px solid #d8bfd8;
 }
 
-.btn{
+input[type="submit"]{
 	text-align: center;
 	border-radius: 100px !important;
 	background: #363851;
 	color: #bebebe;
 	font-size: 15px;
+	padding: 5px;
+}
+input[type="submit"]:hover{
+	color: #fff;
+	background: #30324B;
+}
+
+.list{
+	display: flex;
+    flex-wrap: wrap;
+	padding: 5px;
+}
+
+.list > div {
+  width: 280px;
+  background-color: #fff;
+  border-radius: 3px;
+  border-bottom: 1px solid #bebebe;
+  box-shadow: 1px 4px 10px #bebebe;
+  padding: 10px;
+  margin: 5px 10px;
+}
+
+.btn{
+	display: block;
+	text-decoration: none;
+	text-align: center;
+	border-radius: 100px !important;
+	background: #363851;
+	color: #bebebe;
 	padding: 5px;
 }
 .btn:hover{
