--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -52,6 +52,10 @@ body{
 	min-height: 100px;
 }
 
+#wrapper{
+	min-height: 100vh;
+}
+
 .form-container{
 	margin: 0 auto;
 	min-width: 40%;
@@ -90,14 +94,14 @@ body{
 	margin: 50px 20px
 }
 
-input{
+input, textarea{
 	margin: 5px 0;
 	border: none;
 	border-bottom: 1px solid #d8bfd8;
 	padding: 5px 5px;
 }
 
-input:focus{
+input:focus, textarea:focus{
 	outline: none;
 	border-radius: 3px;
 	border: 1px solid #d8bfd8; 
@@ -133,6 +137,7 @@ input[type="submit"]:hover{
 	display: flex;
     flex-wrap: wrap;
 	padding: 5px;
+	margin: 20px;
 }
 
 .list > div {
@@ -142,7 +147,7 @@ input[type="submit"]:hover{
   border-bottom: 1px solid #bebebe;
   box-shadow: 1px 4px 10px #bebebe;
   padding: 10px;
-  margin: 5px 10px;
+  margin: 15px 2px;
 }
 
 .btn{
@@ -157,4 +162,14 @@ input[type="submit"]:hover{
 .btn:hover{
 	color: #fff;
 	background: #30324B;
+}
+
+.request{
+	margin: 40px20px;
+	padding: 5px;
+	border-radius: 3px;
+	background: #fff;
+	border: 1px solid #bebebe;
+	box-shadow: 1px 4px 10px #bebebe;
+
 }
